# breachlens

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: __init__.py  main.py
app/: __init__.py  ui.py
breachlens/: __init__.py  benchmarks.py  cli.py  config.py  controls.py  cost_model.py  data.py  explain.py  intervals.py  models.py  montecarlo.py  penalties.py  predictor.py  report.py  scenario.py  schema.py  synth.py
data/: DATA_DICTIONARY.md  cyber_breach.csv  cyber_breach.xlsx
docs/report/: Project_Report_Formatted.docx
examples/: original_coursework.py
scripts/: generate_figures.py  social_card.py
tests/: conftest.py  test_benchmarks.py  test_cli.py  test_controls.py  test_cost_model.py  test_data.py  test_intervals.py  test_models.py  test_montecarlo.py  test_penalties.py  test_predictor.py  test_report.py  test_scenario.py  test_synth.py
